--- a/week2lab/index.html
+++ b/week2lab/index.html
@@ -22,6 +22,19 @@ padding: 25px 0 40px 0;
 
 
 .newheader{color: tomato;}
+
+a:link{ color: aqua;
+font-size: larger;
+
+text-decoration: none;
+}
+
+a:visited{ color: blueviolet;}
+
+a:hover
+
+a:active
+
     </style>
 </head>
 <body>
@@ -32,5 +45,6 @@ padding: 25px 0 40px 0;
     <h1>welcome</h1>
     <h1 class="newheader">welcome</h1>
     <a href="riddles.html">link to week 2 riddle page</a>
+    
 </body>
 </html>
