--- a/Diamante_02/index.html
+++ b/Diamante_02/index.html
@@ -46,7 +46,7 @@
 <p class="footer">
     &copy; 2020 HTML Javascript Class </p>
     <img src="images/index.PNG" alt="verification for index">
-    <img src="images/riddles.PNG" alt="verification for riddles">
+    <img src="images/riddles.PNG" alt="verification for riddles">+
 </div>
 </body>
 </html>
