--- a/Week4CarGame/index.html
+++ b/Week4CarGame/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Turret+Road:wght@200&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weel 4 Lab</title>
+    <title>week4cargame</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,23 +12,19 @@
     <div id="container">
 
         <header>
-            <h1>Week 4 Lab will be here</h1>
+            <h1>RACE GAME PROTOTYPE</h1>
         </header>
-        <nav>
-            links will be here
-        </nav>
+        <nav><h1>LINKS</h1></nav>
         <main>
-            <canvas width="800" height="600">
+            <canvas width="1024" height="768">
                 your browser does not support this content.
             </canvas>
         </main>
         <footer>
-            &copy;2020 HTML JavaScript Class
+            <h1>2020 Cole Diamante</h1>
         </footer>
 </div>
-
-<script src="js/Car.js"></script>
 <script src="js/scriptCarGame.js"></script>
-<!--<script src="js/script.js"></script>-->
+<!--<script src="js/script.js"></script>
 </body>
 </html>
