--- a/Week4CarGame/index.html
+++ b/Week4CarGame/index.html
@@ -25,6 +25,6 @@
         </footer>
 </div>
 <script src="js/scriptCarGame.js"></script>
-<!--<script src="js/script.js"></script>
+<!--<script src="js/script.js"></script>-->
 </body>
 </html>
