--- a/RPS/index.html
+++ b/RPS/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <meta name="author" content="Jay Aguiar">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,6 +14,9 @@
             <a href="#" id="scissors">Scissors</a>
         </nav>
         <canvas width="1000" height="600"></canvas>
+        <footer id="footer">
+            <h1>2020 Cole Diamante</h1>
+        </footer>
     </div>
     <script src="rps.js"></script>
 </body>
