Final Almost Done

--- a/RPSpt2/RPSpt2/rps.html
+++ b/RPSpt2/RPSpt2/rps.html
@@ -12,8 +12,9 @@
             <a href="#" id="rock">Rock</a>
             <a href="#" id="paper">Paper</a>
             <a href="#" id="scissors">Scissors</a>
+            <h1>    ROCK PAPER SCISSORS EXTREME</h1>
         </nav>
-        <canvas width="1000" height="600">
+        <canvas width="1000" height="600" id="canvas">
             Fallback content here
         </canvas>
     </div>
